apps/base/productivity/authelia/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: &deploymentName authelia-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: *deploymentName
  template:
    metadata:
      labels:
        app: *deploymentName
    spec:
      enableServiceLinks: false
      containers:
        - name: authelia
          image: docker.io/authelia/authelia:4.39.28@sha256:bd97cff4fcbf715b5ff1f9ae286afbe6033afce385302520b0368122d43a6f54
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9091
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: config-volume
              subPath: authelia/config
            - mountPath: /etc/authelia
              name: configmap-volume
              readOnly: true
            - mountPath: /secrets
              name: secrets-volume
              readOnly: true
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 500m
              memory: 200Mi
      volumes:
        - name: config-volume
          nfs:
            server: ${NFS_STORAGE_HOST_FAST}
            path: ${NFS_STORAGE_CONFIG_DATA_PATH}
        - name: configmap-volume
          configMap:
            name: authelia-config
        - name: secrets-volume
          secret:
            secretName: authelia-secrets
