apps/base/productivity/authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia-service
spec:
  selector:
    app: authelia-deployment
  ports:
    - name: http
      port: 9091
      targetPort: 9091
      protocol: TCP
