apps/base/productivity/authelia/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.local.${DOMAIN}`) || Host(`auth.${DOMAIN}`)
      kind: Rule
      services:
        - name: authelia-service
          port: 9091
  tls:
    certResolver: letsencrypt
